2003-07-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (install-lib): Use $(INSTALL), not
	$(INSTALL_PROGRAM) for $(SHLLIB) files.

2003-07-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (CLEAN_SUBDIRS): New variable.
	(clean mostlyclean distclean maintainer-clean): Use it to ensure
	cleaning in all subdirs, not just those we build in.

	* Makerules.in (maintainer-clean, distclean): Don't use
	dependencies on double colon rules.
	(distclean): Also remove *.d, *.a, *.o, pic/*.o, pic, and stmp-pic.
	(maintainer-clean): Also remove *.d, *.a, *.o, pic/*.o, pic, and
	stmp-pic, and Makefile.

	* Makefile.in (maintainer-clean, distclean): Also remove *.$(SHLEXT).

2003-06-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* dasrt/ddasrt.f (DDASRT): Print correct message for invalid MXSTP.

	* dassl/ddassl.f (DDASSL): Handle MXSTP as in DASRT.

	* dassl/ddajac.f (DDAJAC): LIPVT is now 22.
	* dassl/ddassl.f (DDASSL): Likewise.
	* dassl/ddaslv.f (DDASLV): Likewise.

	* misc/quit.h (octave_interrupt_hook, octave_bad_alloc_hook):
	New function pointers.
	* misc/quit.cc: Initialize them.
	(octave_throw_interrupt_exception): If octave_interrupt_hook is
	set, call it.
	(octave_throw_bad_alloc): Likewise, for octave_bad_alloc_hook.

	* dasrt/ddasrt.f (DDASRT): Set LMXSTP to 21 and LIPVT to 22 to
	avoid conflict with LLAST in DRCHECK.  Change docs for INFO(12)
	and LIW.

2003-05-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in, misc/Makefile.in: Handle DESTDIR.

2003-02-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* blas/sgemm.f, blas/strsm.f, blas/ssyrk.f, blas/sscal.f,
	blas/sgemv.f, blas/sdot.f: New files.

2003-02-20  Paul Kienzle <pkienzle@users.sf.net>

	* dassl/ddaslv.f: Fortran doesn't use ; in statements.

2003-02-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* libcruft/blas/dtbsv.f: New file.
	* libcruft/lapack/dlatrs.f, libcruft/lapack/dtrti2.f,
	libcruft/lapack/dtrtri.f, libcruft/lapack/ztrti2.f,
	libcruft/lapack/ztrtri.f: New files.
